// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLogos > renders with as correctly 1`] = `
"<section data-slot="root">
  <!--v-if-->
  <div data-slot="logos" class="">
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageLogos > renders with class correctly 1`] = `
"<div data-slot="root" class="text-xl">
  <!--v-if-->
  <div data-slot="logos" class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageLogos > renders with default slot correctly 1`] = `
"<div data-slot="root">
  <!--v-if-->
  <div data-slot="logos" class="">Default slot</div>
</div>"
`;

exports[`PageLogos > renders with default slot correctly 2`] = `
"<div data-slot="root">
  <!--v-if-->
  <div data-slot="logos" class="">Default slot</div>
</div>"
`;

exports[`PageLogos > renders with items correctly 1`] = `
"<div data-slot="root">
  <!--v-if-->
  <div data-slot="logos" class=""><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/739984?v=4" alt="Benjamin Canac" data-slot="image"></span><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/71938701?v=4" alt="Hugo Richard" data-slot="image"></span></div>
</div>"
`;

exports[`PageLogos > renders with marquee correctly 1`] = `
"<div data-slot="root">
  <!--v-if-->
  <div data-orientation="horizontal" data-slot="logos" class="">
    <div data-slot="content" class=""><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/739984?v=4" alt="Benjamin Canac" data-slot="image"></span><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/71938701?v=4" alt="Hugo Richard" data-slot="image"></span></div>
    <div data-slot="content" class=""><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/739984?v=4" alt="Benjamin Canac" data-slot="image"></span><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/71938701?v=4" alt="Hugo Richard" data-slot="image"></span></div>
    <div data-slot="content" class=""><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/739984?v=4" alt="Benjamin Canac" data-slot="image"></span><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/71938701?v=4" alt="Hugo Richard" data-slot="image"></span></div>
    <div data-slot="content" class=""><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/739984?v=4" alt="Benjamin Canac" data-slot="image"></span><span data-slot="root"><img src="https://avatars.githubusercontent.com/u/71938701?v=4" alt="Hugo Richard" data-slot="image"></span></div>
  </div>
</div>"
`;

exports[`PageLogos > renders with title correctly 1`] = `
"<div data-slot="root">
  <h2 data-slot="title" class="">Title</h2>
  <div data-slot="logos" class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageLogos > renders with ui correctly 1`] = `
"<div data-slot="root">
  <!--v-if-->
  <div data-slot="logos" class="">
    <!--v-if-->
  </div>
</div>"
`;
